Added a rocket powered model duck...wheeegit add .git add .

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,16 @@ project(Ducks)
 set (SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/Ducks/Duck.cpp 
                ${CMAKE_CURRENT_SOURCE_DIR}/src/Ducks/MallardDuck.cpp 
                ${CMAKE_CURRENT_SOURCE_DIR}/src/Ducks/RedHeadDuck.cpp 
-               ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
+               ${CMAKE_CURRENT_SOURCE_DIR}/src/Ducks/RubberDucky.cpp
+               ${CMAKE_CURRENT_SOURCE_DIR}/src/Ducks/ModelDuck.cpp
                ${CMAKE_CURRENT_SOURCE_DIR}/src/FlyBehavior/FlyBehavior.cpp
                ${CMAKE_CURRENT_SOURCE_DIR}/src/FlyBehavior/FlyNoWay.cpp
                ${CMAKE_CURRENT_SOURCE_DIR}/src/FlyBehavior/FlyWithWings.cpp
+               ${CMAKE_CURRENT_SOURCE_DIR}/src/FlyBehavior/FlyRocketPowered.cpp
                ${CMAKE_CURRENT_SOURCE_DIR}/src/QuackBehavior/QuackBehavior.cpp 
                ${CMAKE_CURRENT_SOURCE_DIR}/src/QuackBehavior/QuackBehavior.cpp 
                ${CMAKE_CURRENT_SOURCE_DIR}/src/QuackBehavior/Quack.cpp 
-               ${CMAKE_CURRENT_SOURCE_DIR}/src/QuackBehavior/Squeak.cpp ) 
+               ${CMAKE_CURRENT_SOURCE_DIR}/src/QuackBehavior/Squeak.cpp 
+               ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp ) 
 
 add_executable(Ducks ${SRC_FILES})
