updating cmakelists.txt

--- a/weatherStation/CMakeLists.txt
+++ b/weatherStation/CMakeLists.txt
@@ -4,7 +4,10 @@ SET(CMAKE_LINKER   "/usr/bin/llvm-ld")
 SET(CMAKE_NM  "/usr/bin/llvm-nm")
 SET(CMAKE_CXX_COMPILER "/usr/bin/clang++")
 SET(CMAKE_C_COMPILER "/usr/bin/clang")
+SET(CATCH_INCLUDE_DIR) 
 
+add_library(Catch INTERFACE)
+target_include_directories(Catch INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include/)
 
 cmake_minimum_required(VERSION 2.5)
 
@@ -23,3 +26,7 @@ set (SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/Subject
                ${CMAKE_CURRENT_SOURCE_DIR}/src/main )
 
 add_executable(WeatherStation ${SRC_FILES})
+add_executable(unit_tests Catch)
+target_link_libraries(unit_tests Catch)
+enable_testing()
+add_test(NAME UnitTests COMMAND unit_tests)
