have catch unit tests working from cmake

--- a/weatherStation/CMakeLists.txt
+++ b/weatherStation/CMakeLists.txt
@@ -4,12 +4,11 @@ SET(CMAKE_LINKER   "/usr/bin/llvm-ld")
 SET(CMAKE_NM  "/usr/bin/llvm-nm")
 SET(CMAKE_CXX_COMPILER "/usr/bin/clang++")
 SET(CMAKE_C_COMPILER "/usr/bin/clang")
-SET(CATCH_INCLUDE_DIR) 
 
 add_library(Catch INTERFACE)
-target_include_directories(Catch INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include/)
+target_include_directories(Catch INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-cmake_minimum_required(VERSION 2.5)
+cmake_minimum_required(VERSION 2.8.8)
 
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR} 
                      ${CMAKE_CURRENT_SOURCE_DIR}/include/)
@@ -25,8 +24,12 @@ set (SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/Subject
                ${CMAKE_CURRENT_SOURCE_DIR}/src/HeatIndexDisplay
                ${CMAKE_CURRENT_SOURCE_DIR}/src/main )
 
+set (TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/tests/unitTestMain.cpp )
+
+add_executable(Unit_Tests ${TEST_SOURCES})
 add_executable(WeatherStation ${SRC_FILES})
-add_executable(unit_tests Catch)
-target_link_libraries(unit_tests Catch)
-enable_testing()
-add_test(NAME UnitTests COMMAND unit_tests)
+
+target_link_libraries(Unit_Tests Catch)
+
+enable_testing(true)
+add_test (NAME UnitTests COMMAND Unit_Tests)
