moved catch to its own directory

--- a/weatherStation/CMakeLists.txt
+++ b/weatherStation/CMakeLists.txt
@@ -1,13 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 
-set(CMAKE_CXX_FLAGS "-g -O0 -Wall -fprofile-arcs -ftest-coverage")
-set(CMAKE_C_FLAGS "-g -O0 -Wall -W -fprofile-arcs -ftest-coverage")
-set(CMAKE_EXE_LINKER_FLAGS "-fprofile-arcs -ftest-coverage")
-set(CMAKE_AR  "/usr/bin/llvm-ar")
-set(CMAKE_LINKER   "/usr/bin/llvm-ld")
-set(CMAKE_NM  "/usr/bin/llvm-nm")
-set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
-set(CMAKE_C_COMPILER "/usr/bin/clang")
+set(CMAKE_CXX_FLAGS "-Wall")
+set(CMAKE_C_FLAGS "-Wall")
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(PROJECT_NAME "WeatherStation")
@@ -16,8 +10,7 @@ set(UNIT_TESTS "Unit_Tests")
 project(${PROJECT_NAME})
 add_library(Catch INTERFACE)
 
-target_include_directories(Catch INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
-                                           ${CMAKE_CURRENT_SOURCE_DIR}/include/)
+target_include_directories(Catch INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/catch/)
 
 
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR} 
@@ -45,7 +38,7 @@ set (TEST_SOURCES ${COMMON_FILES}
                   ${CMAKE_CURRENT_SOURCE_DIR}/tests/mainUnitTest.cpp 
                   ${CMAKE_CURRENT_SOURCE_DIR}/tests/forcastDisplayUnitTest.cpp )
 
-add_executable(WeatherStation ${SRC_FILES})
+               add_executable(${PROJECT_NAME} ${SRC_FILES})
 
 
 add_executable(${UNIT_TESTS} ${TEST_SOURCES})
@@ -53,4 +46,4 @@ target_link_libraries(${UNIT_TESTS} Catch)
 
 enable_testing(true)
 add_test (NAME UnitTests COMMAND Unit_Tests)
-setup_target_for_coverage(${PROJECT_NAME}_coverage Unit_Tests coverage)
+setup_target_for_coverage(${PROJECT_NAME}_coverage ${UNIT_TESTS} coverage)
