reverted CMakeLists.txt

--- a/weatherStation/CMakeLists.txt
+++ b/weatherStation/CMakeLists.txt
@@ -1,25 +1,23 @@
-cmake_minimum_required(VERSION 3.0)
+SET(CMAKE_CXX_FLAGS_INIT   "-Wall")
+SET(CMAKE_AR  "/usr/bin/llvm-ar")
+SET(CMAKE_LINKER   "/usr/bin/llvm-ld")
+SET(CMAKE_NM  "/usr/bin/llvm-nm")
+SET(CMAKE_CXX_COMPILER "/usr/bin/clang++")
+SET(CMAKE_C_COMPILER "/usr/bin/clang")
 
-set(CMAKE_CXX_FLAGS "-Wall")
-set(CMAKE_C_FLAGS "-Wall")
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(PROJECT_NAME "WeatherStation")
-set(UNIT_TESTS "Unit_Tests")
 
-project(${PROJECT_NAME})
 add_library(Catch INTERFACE)
+target_include_directories(Catch INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
+                                           ${CMAKE_CURRENT_SOURCE_DIR}/include/)
 
-target_include_directories(Catch INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/catch/)
-
+cmake_minimum_required(VERSION 2.8.8)
 
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR} 
                      ${CMAKE_CURRENT_SOURCE_DIR}/include/)
 
-
-
-set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)
-include(CodeCoverage)
+project(WeatherStation)
 
 
 set (COMMON_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/Subject
@@ -35,15 +33,14 @@ set (SRC_FILES ${COMMON_FILES}
                ${CMAKE_CURRENT_SOURCE_DIR}/src/main )
 
 set (TEST_SOURCES ${COMMON_FILES}
-                  ${CMAKE_CURRENT_SOURCE_DIR}/tests/mainUnitTest.cpp 
-                  ${CMAKE_CURRENT_SOURCE_DIR}/tests/forcastDisplayUnitTest.cpp )
-
-               add_executable(${PROJECT_NAME} ${SRC_FILES})
+                  ${CMAKE_CURRENT_SOURCE_DIR}/tests/unitTestMain.cpp 
+                  ${CMAKE_CURRENT_SOURCE_DIR}/tests/unitTestForcastDisplay.cpp )
 
 
-add_executable(${UNIT_TESTS} ${TEST_SOURCES})
-target_link_libraries(${UNIT_TESTS} Catch)
+add_executable(Unit_Tests ${TEST_SOURCES})
+add_executable(WeatherStation ${SRC_FILES})
+
+target_link_libraries(Unit_Tests Catch)
 
 enable_testing(true)
 add_test (NAME UnitTests COMMAND Unit_Tests)
-setup_target_for_coverage(${PROJECT_NAME}_coverage ${UNIT_TESTS} coverage)
