--- a/weatherStation/CMakeLists.txt
+++ b/weatherStation/CMakeLists.txt
@@ -1,24 +1,30 @@
-SET(CMAKE_CXX_FLAGS_INIT   "-Wall")
-SET(CMAKE_AR  "/usr/bin/llvm-ar")
-SET(CMAKE_LINKER   "/usr/bin/llvm-ld")
-SET(CMAKE_NM  "/usr/bin/llvm-nm")
-SET(CMAKE_CXX_COMPILER "/usr/bin/clang++")
-SET(CMAKE_C_COMPILER "/usr/bin/clang")
-
+set(CMAKE_AR  "/usr/bin/llvm-ar")
+set(CMAKE_LINKER   "/usr/bin/llvm-ld")
+set(CMAKE_NM  "/usr/bin/llvm-nm")
+set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
+set(CMAKE_C_COMPILER "/usr/bin/clang")
+set(PROJECT_NAME "WeatherStation")
+set(PROJECT_TEST_NAME "Unit_Tests")
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(LCOV_REMOVE_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/catch/")
 
 add_library(Catch INTERFACE)
-target_include_directories(Catch INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
-                                           ${CMAKE_CURRENT_SOURCE_DIR}/include/)
+
+target_include_directories(Catch INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/catch/)
 
 cmake_minimum_required(VERSION 2.8.8)
 
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR} 
                      ${CMAKE_CURRENT_SOURCE_DIR}/include/)
 
-project(WeatherStation)
+project(${PROJECT_NAME})
 
+
+list (APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)
+
+include(CodeCoverage)
+include(UseBackportedModules)
 
 set (COMMON_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/Subject
                   ${CMAKE_CURRENT_SOURCE_DIR}/src/Observer
@@ -33,14 +39,19 @@ set (SRC_FILES ${COMMON_FILES}
                ${CMAKE_CURRENT_SOURCE_DIR}/src/main )
 
 set (TEST_SOURCES ${COMMON_FILES}
-                  ${CMAKE_CURRENT_SOURCE_DIR}/tests/unitTestMain.cpp 
-                  ${CMAKE_CURRENT_SOURCE_DIR}/tests/unitTestForcastDisplay.cpp )
+                  ${CMAKE_CURRENT_SOURCE_DIR}/tests/mainUnitTest.cpp 
+                  ${CMAKE_CURRENT_SOURCE_DIR}/tests/forcastDisplayUnitTest.cpp )
 
 
-add_executable(Unit_Tests ${TEST_SOURCES})
-add_executable(WeatherStation ${SRC_FILES})
-
-target_link_libraries(Unit_Tests Catch)
+add_executable(${PROJECT_TEST_NAME} ${TEST_SOURCES})
+add_executable(${PROJECT_NAME} ${SRC_FILES})
 
 enable_testing(true)
-add_test (NAME UnitTests COMMAND Unit_Tests)
+add_test (NAME UnitTests COMMAND ${PROJECT_TEST_NAME})
+
+target_link_libraries(${PROJECT_TEST_NAME} Catch)
+target_link_libraries(${PROJECT_TEST_NAME} gcov)
+
+SETUP_TARGET_FOR_COVERAGE(${PROJECT_TEST_NAME}_coverage ${PROJECT_TEST_NAME} coverage)
+
+
