added another cmake directory for building an atmel target

--- a/weatherStation/atmel-build/CMakeLists.txt
+++ b/weatherStation/atmel-build/CMakeLists.txt
@@ -1,34 +1,30 @@
-set(PROJECT_NAME_ATMEL "WeatherStation-Atmel")
+set(PROJECT_NAME_ATMEL "WeatherStationAtmel")
 set(CMAKE_CXX_COMPILER "/opt/Programs/buildroot-at91/output/host/usr/bin/arm-linux-c++")
 set(CMAKE_AR "/opt/Programs/buildroot-at91/output/host/usr/bin/arm-linux-ar")
 set(CMAKE_C_COMPILER "/opt/Programs/buildroot-at91/output/host/usr/bin/arm-linux-cc")
-set(ATMEL_CURRENT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
+set(CURRENT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+project(${PROJECT_NAME_ATMEL})
+
 cmake_minimum_required(VERSION 2.8.8)
 
-include_directories( ${ATMEL_CURRENT_SOURCE_DIR} 
-                     ${ATMEL_CURRENT_SOURCE_DIR}/include/)
+include_directories( ${CURRENT_SOURCE_DIR} 
+                     ${CURRENT_SOURCE_DIR}/include/)
 
+                  add_custom_command(OUTPUT runUnitTest.bc COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/runUnitTest.sh ${CMAKE_CURRENT_SOURCE_DIR}/build)
+add_custom_target(tests DEPENDS runUnitTest.bc)
 
-
-file (GLOB COMMON_FILES ${ATMEL_CURRENT_SOURCE_DIR}/src/*)
+file (GLOB COMMON_FILES ${CURRENT_SOURCE_DIR}/src/*)
 
               
-set (SRC_FILES ${COMMON_FILES} ${ATMEL_CURRENT_SOURCE_DIR}/main )
+set (SRC_FILES ${COMMON_FILES} ${CURRENT_SOURCE_DIR}/main )
 
 add_executable(${PROJECT_NAME} ${SRC_FILES})
 
-include(${ATMEL_CURRENT_SOURCE_DIR}/atmel-build/CMakeLists.txt)
 
-enable_testing(true)
-include(${ATMEL_CURRENT_SOURCE_DIR}/catch-tests/CMakeLists.txt)
-add_subdirectory(${ATMEL_CURRENT_SOURCE_DIR}/googletest)
-include(${ATMEL_CURRENT_SOURCE_DIR}/google-tests/CMakeLists.txt)
+include(${CURRENT_SOURCE_DIR}/catch-tests/CMakeLists.txt)
 
-project(${PROJECT_NAME_ATMEL})
-
-add_executable(${PROJECT_NAME_ATMEL} ${SRC_FILES})
 
 
