--- a/weatherStation/CMakeLists.txt
+++ b/weatherStation/CMakeLists.txt
@@ -2,7 +2,10 @@ set(PROJECT_NAME "WeatherStation")
 set(PROJECT_TEST_NAME "Unit_Tests")
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(LCOV_REMOVE_EXTRA "'catch/*'")
+set(LCOV_REMOVE_EXTRA ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(LCOV_REMOVE_EXTRA ${CMAKE_CURRENT_SOURCE_DIR}/catch)
+set(LCOV_REMOVE_EXTRA ${CMAKE_CURRENT_SOURCE_DIR}/tests)
+
 add_library(Catch INTERFACE)
 
 project(${PROJECT_NAME})
