added a few minor comments

--- a/weatherStation/CMakeLists.txt
+++ b/weatherStation/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CURRENT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
 project(${PROJECT_NAME})
 
+set(CMAKE_MODULE_PATH ${CURRENT_SOURCE_DIR}/CMakeModules)
 cmake_minimum_required(VERSION 2.8.8)
 
 include_directories( ${CURRENT_SOURCE_DIR} 
@@ -21,8 +22,11 @@ add_executable(${PROJECT_NAME} ${SRC_FILES})
 
 
 enable_testing(true)
+#enable catch tests
 include(${CURRENT_SOURCE_DIR}/catch-tests/CMakeLists.txt)
 include(${CURRENT_SOURCE_DIR}/catch-tests-coverage/CMakeLists.txt)
+
+#enable google test
 add_subdirectory(${CURRENT_SOURCE_DIR}/googletest)
 include(${CURRENT_SOURCE_DIR}/google-tests/CMakeLists.txt)
 include(${CURRENT_SOURCE_DIR}/google-tests-coverage/CMakeLists.txt)
